# zaptec-costs

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
src/: date.py  elvia_api.py  secrets.py  strompriser_api.py  zaptec_api.py
zaptec_costs/: main.py  table.html  template.html  totals.html
zaptec_costs/src/: args.py  elvia_api.py  models.py  secrets.py  strompriser_api.py  utils.py  zaptec_api.py
